# gear_design

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp  mini_main.cpp
include/gear_design/: algorithm.hpp  coordinates.hpp  f_gear.hpp  f_gear_objective_function.hpp  gear_profile.hpp  intersection.hpp  involute_gear.hpp  myfunc.hpp  objfunctions.hpp  quadratic_gear.hpp  sigbase_f_gear.hpp
lib/gear_design/: quadratic_gear.cpp
note/: CMakeList.txt.copy  eigen_howto
plot/: plot_ex1.gp
plot/f_gear/: .memo-g++  gendata_multi_sigbase_fgear_profile.cpp  gendata_objfunc.cpp  gendata_sigbase_fgear_profile.cpp
plot/f_gear/fgear_profile/: script_plot_fgear.gp
plot/f_gear/objfunc_shape/: gendata_objfunc.cpp  script_plot_objfunc_shape.gp
plot/fgear_profile/: CMakeLists.txt  gendata_sigbase_fgear_profile.cpp
plot/fgear_profile/gendata/: gendata_multi_sigbase_fgear_profile.cpp  gendata_siggear_fgear_profile.cpp
plot/my_try/: generate_date.cpp
plot/objfunc_shape/: gendata_objfunc.cpp  script_plot_objfunc_shape.gp
plot/polar/: plot.gp
src/: calc_sigbase_f_gear_y.cpp  coordinates.cpp  f_gear.cpp  f_gear_intersection.cpp  f_gear_objective_function.cpp  f_gear_profile.cpp  involute.cpp  involute_gear.cpp  objfunctions.cpp  prospect.cpp  quadratic_f.cpp  quadratic_gear.cpp
test/: CMakeLists.txt  main.cpp  test_coordinates.cpp  test_coordinates_optimization.cpp  test_coordinates_optimization_legacy.cpp  test_coordinates_transformation.cpp  test_f_gear.cpp  test_f_gear_calc_y_base_from_xgear.cpp  test_quadratic_gear.cpp
